--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,6 @@
     <string name="app_name">Caalogos_Livros</string>
     <string name="txt_cadastrar">Cadastrar</string>
     <string name="txt_pesquisar">Pesquisar</string>
+    <string name="txt_pesquisarpor">Pesquisar por</string>
 
 </resources>
